--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -6,6 +6,9 @@
 
 .dashboard__content-main {
     background-color: $light;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: flex-start;
     height: 100%;
     flex-grow: 1;
     flex-shrink: 1;
