--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -2,9 +2,7 @@
     background-color: white;
     border-radius: 5px;
     height: auto;
-    
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     max-width: 400px;
     width: 100%;
 }
