--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -1,24 +1,43 @@
-.sidebar__content {
+.sidebar__content, .sidebar__compact-content {
     background-color: $secundary;
     height: 100%;
-    flex-grow: 1;
-    flex-shrink: 0;
     max-width: 400px;
     min-width: 400px;
+}
+
+.sidebar__compact-content {
+    max-width: 70px;
+    min-width: 70px;
+
+    .sidebar__head {
+        justify-content: center;
+    }
 }
 
 .sidebar__head {
 
     align-items: center;
+    border-bottom: 2px solid $primary;
     color: $light;
     display: flex;
-    border-bottom: 2px solid $primary;
+    justify-content: space-between;
 
     h4 {
         font-size: 1.5rem;
         font-family: sans-serif, Helvetica;
         font-weight: bold;
         margin-left: 1rem;
+    }
+
+    span {
+        cursor: pointer;
+        height: auto;
+        transition: all 300ms;
+        width: auto;
+
+        &:hover {
+            color: $primary;
+        }
     }
 
     svg {
